--- a/style.css
+++ b/style.css
@@ -1,1 +1,47 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
 
+body{
+    background-color: rgb(207, 92, 201);
+    text-align: center;
+}
+
+.container {
+    height: 70vh;
+    display: flex;
+    /* flex-wrap: wrap; */
+    justify-content: center;
+    align-items: center;
+    gap: 1.5vmin;
+}
+
+.game{
+    height: 60vmin;
+    width: 60vmin;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5vmin;
+    border-radius: 1.5rem;
+    border: none;
+    box-shadow: 0 0 1rem rgba(0,0,0,0.1);
+}
+
+.box{
+    height: 18vmin;
+    width: 18vmin;
+    border-radius: 1rem;
+    border: none;
+    box-shadow: 0 0 1rem rgba(0,0,0,0.1);
+    font-size: 8vmin;
+}
+#reset{
+    padding: 1rem;
+    background-color: black;
+    color: aliceblue;
+    border-radius: .5rem;
+    border: none;
+}
